[project]
name = "jenv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Jarek Liesen", email = "jarek.liesen@reuben.ox.ac.uk"},
]
dependencies = [
    "jax>=0.8.0",
]

license = {text = "MIT"}
keywords = [
    "machine-learning",
    "reinforcement-learning",
    "jax",
    "vectorization",
    "hardware-acceleration",
]

[project.urls]
Homepage = "https://github.com/keraJLi/jenv"
Repository = "https://github.com/keraJLi/jenv"
Documentation = "https://github.com/keraJLi/jenv#readme"
Issues = "https://github.com/keraJLi/jenv/issues"
Changelog = "https://github.com/keraJLi/jenv/releases"

[project.optional-dependencies]
# Compatibility wrappers for various RL environments
compat = [
    "brax>=0.11.0",
    "craftax>=1.4.3",
    "navix>=0.7.0",
    "jumanji>=1.0.1",
    "gymnasium>=1.0.0",
    "kinetix-env>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "ruff>=0.14.2",
]
